# ai-bgm

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  README.zh-CN.md  main.py  pyproject.toml
aibgm/: ai_bgm_play.py  ai_bgm_select.py  ai_bgm_setup.py  ai_bgm_stop.py  cli.py  common.py  config.json  main.py  play.py  select.py  setup.py  stop.py
aibgm/assets/hooks/: ai-bgm-play-done.sh  ai-bgm-play-work.sh  ai-bgm-stop.sh
aibgm/commands/: __init__.py  disable.py  enable.py  play.py  select.py  setup.py  stop.py  toggle.py
aibgm/commands/integrations/: README.md  __init__.py  claude.py  cursor_agent.py  gemini.py  iflow.py  opencode.py  registry.py
aibgm/utils/: __init__.py  common.py  logger.py  process.py
docs/: Dev.md  OpenCode-Plugin-Issues.md  Refactoring.md
mythril_agent_bgm/: cli.py  config.json
mythril_agent_bgm/commands/: cleanup.py  disable.py  enable.py  select.py  setup.py
mythril_agent_bgm/commands/integrations/: README.md  claude.py  iflow.py  opencode.py  registry.py
mythril_agent_bgm/utils/: common.py
scripts/: publish.py
tests/: README.md  __init__.py  test_windows_compat.py
